// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing Radio with snapshot Testing Radio with required props 1`] = `
<div
  className="container"
>
  <span>
     Vote to uncover the total number of voters 
  </span>
  <span>
    <svg
      data-file-name="SvgShare"
    />
  </span>
</div>
`;

exports[`Testing Radio with snapshot Testing Radio with required props 2`] = `
<div
  className="container"
>
  <span>
    120
     votes
  </span>
  <span>
    <svg
      data-file-name="SvgShare"
    />
  </span>
</div>
`;
